# xml2saty

./: .gitignore  Makefile  README.md  configApply.ml  configApply.mli  configState.ml  configState.mli  dune-project  error.ml  lex.mll  main.ml  parse.mly  satysfiSyntax.ml  types.ml  xml2saty.opam
.github/workflows/: blank.yml
doc/: doc-ja.md
example/: gengou.x2s-config  law.x2s-config  local.satyh
lib/: HTML.x2s-config
src/: configApply.ml  configApply.mli  configState.ml  configState.mli  dune  error.ml  error.mli  jsonConfig.ml  lex.mll  main.ml  optionState.ml  optionState.mli  parse.mly  range.ml  readJson.ml  readJson.mli  satysfiSyntax.ml  satysfiSyntax.mli  types.ml
