opam-version: "2.0"
version: "1.0.0"
maintainer: "puripuri2100"
synopsis: "This software converts xml file to SATySFi's document file."
description: """
This software converts xml file to SATySFis document file.
"""
license: "UNLICENSE"
tags: []
homepage: "https://github.com/puripuri2100/xml2saty"
doc: "https://github.com/puripuri2100/xml2saty/doc"
bug-reports: "https://github.com/puripuri2100/xml2saty/issues"
depends: [
  "ocaml" {>= "4.06.0"}
  "xml-light"
  "menhir"
]
build: [
  ["make" "-f" "Makefile" "build"]
]
dev-repo: "https://github.com/puripuri2100/xml2saty.git"